WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287141
Fix painting of iOS form controls in sideways-lr writing mode
https://bugs.webkit.org/show_bug.cgi?id=287141
Summary
Fix painting of iOS form controls in sideways-lr writing mode
Tim Nguyen (:ntim)
Reported
2025-02-06 04:07:17 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-06 04:09:30 PST
<
rdar://problem/144298355
>
Tim Nguyen (:ntim)
Comment 2
2025-02-06 04:14:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40113
EWS
Comment 3
2025-02-06 08:07:57 PST
Committed
289932@main
(f5e09b7f0ccc): <
https://commits.webkit.org/289932@main
> Reviewed commits have been landed. Closing PR #40113 and removing active labels.
EWS
Comment 4
2025-02-07 13:55:16 PST
Committed
289651.61@safari-7621-branch
(d1643491abaf): <
https://commits.webkit.org/289651.61@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2535 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug