Fix painting of iOS form controls in sideways-lr writing mode https://bugs.webkit.org/show_bug.cgi?id=287141 rdar://144298355

Reviewed by Aditya Keerthi.

Many form controls paint backwards on iOS in sideways-lr. Fix this by replacing `isLeftToRightDirection()` to `!isInlineFlipped()`.

* Source/WebCore/rendering/ios/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::paintMenuListButtonDecorations):
(WebCore::RenderThemeIOS::paintSliderTrack):
(WebCore::RenderThemeIOS::paintProgressBar):
(WebCore::RenderThemeIOS::paintMeter):

Canonical link: https://commits.webkit.org/289932@main